Correct card layout problems with image

--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,13 @@ button {
   cursor: pointer;
 }
 
+#root {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
+}
+
 /* HEADER and FOOTER */
 header,
 footer {
@@ -43,12 +50,6 @@ footer {
 .card {
   position: relative;
   width: 200px;
-  overflow: hidden;
-  /* filter: grayscale(100%); */
-  transition: filter 0.2s linear;
-}
-.card:hover {
-  filter: grayscale(0);
 }
 .card__close {
   position: absolute;
@@ -62,9 +63,14 @@ footer {
   transition: all 0.2s linear;
 }
 .card__img {
-  display: block;
   height: 200px;
-  min-width: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+.card__img img {
+  display: block;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   object-position: center;
 }
